--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+ h1 {
+  text-align: center;
+ }
+
+ .listSales {
+  list-style-type: none;
+  /*padding: 20px;*/
+  padding-inline-start: 0;
+ }
+ .listSales li{
+  margin-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
+ }
+ .listSales li > span {
+  margin-right: 10px;
+ }
+ .listSales li > span > input {
+    height: 18px;
+    width: 18px;
+    margin: 0 0 0 0;
+    vertical-align: bottom;
+ }
+
+ button {
+  border: 2px solid #24b4fb;
+  background-color: #24b4fb;
+  border-radius: 0.9em;
+  cursor: pointer;
+  padding: 0.8em 1.2em 0.8em 1em;
+  transition: all ease-in-out 0.2s;
+  font-size: 16px;
+  margin: 0 5px ;
+}
+
+button span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
+}
+
+button:hover {
+  background-color: #0071e2;
+}
+
+section {
+  padding: 15px;
+}
